--- a/QuanLiHocSinh/QLHS.BUS/QLHS.BUS.csproj
+++ b/QuanLiHocSinh/QLHS.BUS/QLHS.BUS.csproj
@@ -37,17 +37,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LOP_BUS.cs" />
-    <Compile Include="GIANGDAY_BUS.cs" />
-    <Compile Include="DIEM_BUS.cs" />
-    <Compile Include="GIAOVIEN_BUS.cs" />
-    <Compile Include="HOCKY_BUS.cs" />
-    <Compile Include="HOCSINH_BUS.cs" />
-    <Compile Include="KHOI_BUS.cs" />
-    <Compile Include="LOAIDIEM_BUS.cs" />
-    <Compile Include="LOAINGUOIDUNG_BUS.cs" />
-    <Compile Include="MONHOC_BUS.cs" />
-    <Compile Include="NAMHOC_BUS.cs" />
+    <Compile Include="clsLOP_BUS.cs" />
+    <Compile Include="clsGIANGDAY_BUS.cs" />
+    <Compile Include="clsDIEM_BUS.cs" />
+    <Compile Include="clsGIAOVIEN_BUS.cs" />
+    <Compile Include="clsHOCKY_BUS.cs" />
+    <Compile Include="clsHOCSINH_BUS.cs" />
+    <Compile Include="clsKHOI_BUS.cs" />
+    <Compile Include="clsLOAIDIEM_BUS.cs" />
+    <Compile Include="clsLOAINGUOIDUNG_BUS.cs" />
+    <Compile Include="clsMONHOC_BUS.cs" />
+    <Compile Include="clsNAMHOC_BUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
