--- a/QuanLiHocSinh/QLHS.DTO/QLHS.DTO.csproj
+++ b/QuanLiHocSinh/QLHS.DTO/QLHS.DTO.csproj
@@ -37,17 +37,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DIEM_DTO.cs" />
-    <Compile Include="GIANGDAY_DTO.cs" />
-    <Compile Include="GIAOVIEN_DTO.cs" />
-    <Compile Include="HOCKY_DTO.cs" />
-    <Compile Include="HOCSINH_DTO.cs" />
-    <Compile Include="KHOI_DTO.cs" />
-    <Compile Include="LOAIDIEM_DTO.cs" />
-    <Compile Include="LOAINGUOIDUNG_DTO.cs" />
-    <Compile Include="LOP_DTO.cs" />
-    <Compile Include="MONHOC_DTO.cs" />
-    <Compile Include="NAMHOC_DTO.cs" />
+    <Compile Include="clsDIEM_DTO.cs" />
+    <Compile Include="clsGIANGDAY_DTO.cs" />
+    <Compile Include="clsGIAOVIEN_DTO.cs" />
+    <Compile Include="clsHOCKY_DTO.cs" />
+    <Compile Include="clsHOCSINH_DTO.cs" />
+    <Compile Include="clsKHOI_DTO.cs" />
+    <Compile Include="clsLOAIDIEM_DTO.cs" />
+    <Compile Include="clsLOAINGUOIDUNG_DTO.cs" />
+    <Compile Include="clsLOP_DTO.cs" />
+    <Compile Include="clsMONHOC_DTO.cs" />
+    <Compile Include="clsNAMHOC_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
