--- a/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
+++ b/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
@@ -111,7 +111,11 @@
     <Content Include="resources\DoiMatKhau.png" />
     <Content Include="resources\education-edutainment-2.png" />
     <Content Include="resources\HuongDan.png" />
+    <Content Include="resources\imagdes copy.png" />
+    <Content Include="resources\images copy.png" />
+    <Content Include="resources\imdages copy.png" />
     <Content Include="resources\ismages copy.png" />
+    <Content Include="resources\notus-icon.png" />
     <Content Include="resources\preferences-desktop-personal.png" />
     <Content Include="resources\school.png" />
     <Content Include="resources\Search-Male-User.png" />
@@ -119,6 +123,7 @@
     <Content Include="resources\search_user.png" />
     <Content Include="resources\student_icon copy.png" />
     <Content Include="resources\Teacher-icon.png" />
+    <Content Include="resources\Teacher_Female_Dark.png" />
     <Content Include="resources\ThamSo.png" />
     <Content Include="resources\ThongTin.png" />
     <Content Include="resources\win7.png" />
