--- a/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
+++ b/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
@@ -62,11 +62,11 @@
     <Compile Include="frmGiaoVien.Designer.cs">
       <DependentUpon>frmGiaoVien.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmHocSinh.cs">
+    <Compile Include="frmTiepNhanHocSinh.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmHocSinh.Designer.cs">
-      <DependentUpon>frmHocSinh.cs</DependentUpon>
+    <Compile Include="frmTiepNhanHocSinh.Designer.cs">
+      <DependentUpon>frmTiepNhanHocSinh.cs</DependentUpon>
     </Compile>
     <Compile Include="frmLoaiDiem.cs">
       <SubType>Form</SubType>
@@ -116,6 +116,12 @@
     <Compile Include="frmThongSo.Designer.cs">
       <DependentUpon>frmThongSo.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTimHocSinh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTimHocSinh.Designer.cs">
+      <DependentUpon>frmTimHocSinh.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmdanhsachlop.resx">
@@ -127,8 +133,8 @@
     <EmbeddedResource Include="frmGiaoVien.resx">
       <DependentUpon>frmGiaoVien.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmHocSinh.resx">
-      <DependentUpon>frmHocSinh.cs</DependentUpon>
+    <EmbeddedResource Include="frmTiepNhanHocSinh.resx">
+      <DependentUpon>frmTiepNhanHocSinh.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLoaiDiem.resx">
       <DependentUpon>frmLoaiDiem.cs</DependentUpon>
@@ -153,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmThongSo.resx">
       <DependentUpon>frmThongSo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTimHocSinh.resx">
+      <DependentUpon>frmTimHocSinh.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
