--- a/QuanLiHocSinh/QLHS.BUS/QLHS.BUS.csproj
+++ b/QuanLiHocSinh/QLHS.BUS/QLHS.BUS.csproj
@@ -52,6 +52,7 @@
     <Compile Include="clsMONHOC_BUS.cs" />
     <Compile Include="clsNAMHOC_BUS.cs" />
     <Compile Include="clsNGUOIDUNG_BUS.cs" />
+    <Compile Include="clsQUYDINH_BUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
