--- a/QuanLiHocSinh/QLHS.DTO/QLHS.DTO.csproj
+++ b/QuanLiHocSinh/QLHS.DTO/QLHS.DTO.csproj
@@ -51,6 +51,7 @@
     <Compile Include="clsMONHOC_DTO.cs" />
     <Compile Include="clsNAMHOC_DTO.cs" />
     <Compile Include="clsNGUOIDUNG_DTO.cs" />
+    <Compile Include="clsQUYDINH_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
