--- a/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
+++ b/QuanLiHocSinh/QuanLiHocSinh/QuanLiHocSinh.csproj
@@ -263,6 +263,7 @@
       <DependentUpon>QuanLyHocSinh1.mdf</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="resources\Xoa.ico" />
     <None Include="resources\39.png" />
     <None Include="resources\348527.png" />
     <None Include="resources\902759421.png" />
@@ -271,15 +272,18 @@
     <Content Include="resources\books copy.png" />
     <Content Include="resources\cal-ico copy.png" />
     <Content Include="resources\Calendar-icon.png" />
+    <None Include="resources\Chonanh.ico" />
     <Content Include="resources\class.png" />
     <Content Include="resources\classroom.jpg" />
     <Content Include="resources\classroom_icon.png" />
     <Content Include="resources\class_room_icon.jpg" />
     <Content Include="resources\DangXuat.png" />
     <Content Include="resources\DoiMatKhau.png" />
+    <None Include="resources\Dongy.ico" />
     <Content Include="resources\education-edutainment-2.png" />
     <None Include="resources\Employee Add copy.png" />
     <Content Include="resources\HuongDan.png" />
+    <None Include="resources\Huybo.ico" />
     <Content Include="resources\imagdes copy.png" />
     <Content Include="resources\images copy.png" />
     <Content Include="resources\imdages copy.png" />
@@ -298,11 +302,14 @@
     <Content Include="resources\search_user.png" />
     <None Include="resources\splash-of-spring-backgrounds-wallpapaers.jpg" />
     <Content Include="resources\student_icon copy.png" />
+    <None Include="resources\Sua.ico" />
     <Content Include="resources\Teacher-icon.png" />
     <Content Include="resources\Teacher_Female_Dark.png" />
     <Content Include="resources\ThamSo.png" />
     <None Include="resources\thoat.png" />
+    <None Include="resources\Them.ico" />
     <Content Include="resources\ThongTin.png" />
+    <None Include="resources\Truoc.ico" />
     <Content Include="resources\Untitled-d.png" />
     <Content Include="resources\win7.png" />
     <Content Include="resources\win8.png" />
