--- a/QuanLiHocSinh/QLHS.BUS/QLHS.BUS.csproj
+++ b/QuanLiHocSinh/QLHS.BUS/QLHS.BUS.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsHANHKIEM_BUS.cs" />
+    <Compile Include="clsHOCKY_BUS.cs" />
     <Compile Include="clsLOAIHANHKIEM_BUS.cs" />
     <Compile Include="clsLOP_BUS.cs" />
     <Compile Include="clsGIANGDAY_BUS.cs" />
